Rework DaoRegistry (#8182)
* Rework DaoRegistry

* Add changelog

* Build fix

* Fix transactional

* Version bump

* Cleanup

* Cleanup

* Compile fix

* Test fix

* Test fixes

* test fix

* Test fixes

* Test fixes